--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
   "files.exclude": {
     "**/__pycache__": true,
     "**/.pytest_cache": true
-  }
+  },
+  "python.linting.enabled": true,
+  "python.linging.pylintEnable":true,
+  "editor.tabSize": 4,
+  "editor.insertSpaces": true,
+  "python.linting.pylintArgs": ["--rcfile=${workspaceFolder}/.pylintrc"]
 }
