--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.exclude": {
+    "**/*.pyc": {"when": "$(basename).py"},
     "**/__pycache__": true,
     "**/.pytest_cache": true
   },
